--- a/index.html
+++ b/index.html
@@ -48,22 +48,27 @@
     
     <!---->
     <section class="section-1">
-        <section class="section-1.1">
-            <a href="" title="Cambiar foto de perfil"><img src="">imagen</a> <!--Imagen de perfil-->
-        </section>
-        <section class="section-1.2">
-            <a href="">
-                <h1>sernatatiana27</h1>
+        <section class="profile-picture">
+            <a href="#" title="Cambiar foto de perfil">
+                <img src="assets/images/profile.jpg" alt="Foto de perfil">
             </a>
-            <button>Editar Perfil</button>
-            <button>Ver archivo</button>
-            <a href=""><i class="fa-solid fa-gear"></i></a><br>
-
-            <h2>6 publicaciones</h2>
-            <a href="">12 seguidores</a>
-            <a href="">34 seguidos</a>
-            <h3>Tatiana Serna</h3><br>
         </section>
+        <section class="profile-info">
+            <div class="profile-header">
+                <a href="#"><h1>sernatatiana27</h1></a>
+                <button>Editar Perfil</button>
+                <button>Ver archivo</button>
+                <a href="#"><i class="fa-solid fa-gear"></i></a>
+            </div>
+            <div class="profile-stats">
+                <h2><span class="stat-number">6</span> <span class="stat-label">publicaciones</span></h2>
+                <a href="#"><span class="stat-number">12</span> <span class="stat-label">seguidores</span></a>
+                <a href="#"><span class="stat-number">34</span> <span class="stat-label">seguidos</span></a>
+            </div>            
+            <h3 class="profile-name">Tatiana Serna</h3>
+        </section>
+    </section>
+    
 
         <section class="section-1.3">
             <a href=""><i class="fa-solid fa-plus"></i></a>
