--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                 <a href="#"><span class="stat-number">34</span> <span class="stat-label">seguidos</span></a>
             </div>            
             <h3 class="profile-name">Tatiana Serna</h3>
+            <p class="profile-threads">sernatatiana27.threads.net</p>
         </section>
     </section>
     
