--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Clon de perfil de Instagram con HTML y CSS">
     <meta name="keywords" content="Instagram, clon, HTML, CSS, UI, diseño">
     <meta name="author" content="Tu Nombre">
-    <title>Maquetación HTML</title>
+    <title>Instagram</title>
 
     <!-- Estilos -->
     <link rel="stylesheet" href="css/styles.css">
