Mensaje de commit

--- a/index.html
+++ b/index.html
@@ -128,15 +128,15 @@
         </div>
 
         <div class="content" id="guardadas">
-            <h2></i>GUARDADAS</h2>
             <a href="#">
-                <h4>Solo tú puedes ver lo que has guardado</h4>
+                <h5 class="tittle-1">Solo tú puedes ver lo que has guardado</h4>
             </a>
             <a href="#">
-                <h3>Nueva Colección</h3>
+                <h3 class="tittle-2" ><i class="fa-solid fa-plus"></i>Nueva Colección</h3>
             </a>
-            <a href="#"><img src="assets/images/guardadas.jpg" alt="imagen guardada"></a>
-            <h2>Todas las publicaciones</h2>
+            <div class="contenedor-especial">
+            <a href="#"><img class="imagen-g1 especial" src="assets/images/Captura de pantalla 2025-03-31 180720.png" alt="imagen guardada"></a>
+            <h2  class="tittle-3 especial-texto">Todas las publicaciones</h2>
         </div>
 
         <div class="content" id="etiquetadas">
