--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Grand+Hotel&display=swap" rel="stylesheet">
 
-
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="96x96" href="assets/Favicon/favicon-96x96.png">
 </head>
@@ -136,16 +135,19 @@
                 <h3 class="tittle-2" ><i class="fa-solid fa-plus"></i>Nueva Colección</h3>
             </a>
             <div class="contenedor-especial">
-            <a href="#"><img class="imagen-g1 especial" src="assets/images/Captura de pantalla 2025-03-31 180720.png" alt="imagen guardada"></a>
-            <h2  class="tittle-3 especial-texto">Todas las publicaciones</h2>
+                <a href="#">
+                    <img class="imagen-g1" src="assets/images/Captura de pantalla 2025-03-31 180720.png" alt="imagen guardada">
+                </a>
+                <h2 class="tittle-3">Todas las publicaciones</h2>
+            </div>
+            
         </div>
 
         <div class="content" id="etiquetadas">
-            <h2>ETIQUETADAS</h2>
-            <i class="fa-solid fa-circle-user" title="Fotos en las que apareces"></i>
-            <h1><u>Fotos en las que apareces</u></h1>
-            <h3>Cuando las personas te etiqueten en fotos, aparecerán aquí.</h3>
-        </div>
+            <i class="fa-solid fa-circle-user" id="icon" title="Fotos en las que apareces"></i><br><br>
+            <h1 class="tittle--1"><b>Fotos en las que <br> apareces</b></h1><br>
+            <h3 class="tittle--2">Cuando las personas te etiqueten en fotos, aparecerán<br> aquí.</h3>
+        </div><br><br>
     </div><br><br>
 
     <footer>
