--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
                     </div>
                 </div>
                 <div class="profile-stats">
-                    <h2>6 publicaciones</h2>
-                    <a href="#">12 seguidores</span></a>
-                    <a href="#">34 seguidos</span></a>
+                    <h2><span class="stat-number">6</span> <span class="stat-label">publicaciones</span></h2>
+                    <a href="#"><span class="stat-number">12</span> <span class="stat-label">seguidores</span></a>
+                    <a href="#"><span class="stat-number">34</span> <span class="stat-label">seguidos</span></a>
                 </div>
                 <h3 class="profile-name">Tatiana Serna</h3>
             </section>
