--- a/index.html
+++ b/index.html
@@ -109,34 +109,20 @@
     <!-- <div class="profile-divider"></div> >
   
   <-- CONTENIDO DE LAS PESTAÑAS -->
-
-    <div class="content_box">
-        <div class="content active" id="publicaciones">
+  <div class="content_box">
+    <div class="content active" id="publicaciones">
+        <!-- Contenedor interno para el grid -->
+        <div class="publications-grid">
             <a href="#"><img class="imagen1" src="assets/images/1.jpg" alt="imagen 1"></a>
             <a href="#"><img class="imagen2" src="assets/images/2.jpg" alt="imagen 2"></a>
-            <a href="#"><img class="imagen3" src="assets/images/8.jpg" alt="imagen 3"></a><br>
+            <a href="#"><img class="imagen3" src="assets/images/8.jpg" alt="imagen 3"></a>
+            <a href="#"><img class="imagen4" src="assets/images/4.jpg" alt="imagen 4"></a>
+            <a href="#"><img class="imagen5" src="assets/images/9.jpg" alt="imagen 5"></a>
+            <a href="#"><img class="imagen6" src="assets/images/6.jpg" alt="imagen 6"></a>
         </div>
-        <div class="content" id="publicaciones2">
-            <a href="#"><img class="imagen4" src="assets/images/4.jpg" alt="imagen 1"></a>
-            <a href="#"><img class="imagen5" src="assets/images/9.jpg" alt="imagen 2"></a>
-            <a href="#"><img class="imagen6" src="assets/images/6.jpg" alt="imagen 3"></a>
-        </div>
-
-        <div class="content" id="guardadas">
-            <a href="#">
-                <h5 class="tittle-1">Solo tú puedes ver lo que has guardado</h4>
-            </a>
-            <a href="#">
-                <h3 class="tittle-2" ><i class="fa-solid fa-plus"></i>Nueva Colección</h3>
-            </a>
-            <div class="contenedor-especial">
-                <a href="#">
-                    <img class="imagen-g1" src="assets/images/Captura de pantalla 2025-03-31 180720.png" alt="imagen guardada">
-                </a>
-                <h2 class="tittle-3">Todas las publicaciones</h2>
-            </div>
-            
-        </div>
+    </div>
+    <!-- Otras pestañas o contenidos... -->
+</div>
 
         <div class="content" id="etiquetadas">
             <i class="fa-solid fa-circle-user" id="icon" title="Fotos en las que apareces"></i><br><br>
