--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         <section class="section-1">
             <div class="profile-left">
                 <section class="profile-picture">
-                    <a href="#" title="Cambiar foto de perfil">
-                        <img src="assets/images/profile.jpg" alt="Foto de perfil">
+                    <a  href="#" title="Cambiar foto de perfil">
+                        <img id="img" src="assets/images/profile.jpg" alt="Foto de perfil">
                     </a>
                 </section>
 
@@ -65,21 +65,21 @@
 
             <section class="profile-info">
                 <div class="profile-header">
-                    <a href="#">
+                    <a class="tittle1" href="#">
                         <h1>sernatatiana27</h1>
                     </a>
                     <div class="profile-actions">
-                        <button>Editar Perfil</button>
-                        <button>Ver archivo</button>
-                        <a href="#"><i class="fa-solid fa-gear"></i></a>
+                        <button class="button1">Editar Perfil</button>
+                        <button class="button1">Ver archivo</button>
+                        <a class="tuerca" href="#"><i class="fa-solid fa-gear"></i></a>
                     </div>
                 </div>
                 <div class="profile-stats">
-                    <h2><span class="stat-number">6</span> <span class="stat-label">publicaciones</span></h2>
-                    <a href="#"><span class="stat-number">12</span> <span class="stat-label">seguidores</span></a>
-                    <a href="#"><span class="stat-number">34</span> <span class="stat-label">seguidos</span></a>
+                    <h2><span class="stat-number1">6</span> <span class="stat-label1">publicaciones</span></h2>
+                    <a href="#"><span class="stat-number2">12</span> <span class="stat-label">seguidores</span></a>
+                    <a href="#"><span class="stat-number3">34</span> <span class="stat-label">seguidos</span></a>
                 </div>
-                <h3 class="profile-name">Tatiana Serna</h3>
+                <h3 class="profile-name" id="name">Tatiana Serna</h3>
             </section>
         </section>
 
@@ -147,8 +147,8 @@
             <i class="fa-solid fa-circle-user" id="icon" title="Fotos en las que apareces"></i><br><br>
             <h1 class="tittle--1"><b>Fotos en las que <br> apareces</b></h1><br>
             <h3 class="tittle--2">Cuando las personas te etiqueten en fotos, aparecerán<br> aquí.</h3>
-        </div><br><br>
-    </div><br><br>
+        </div>
+    </div><br>
 
     <footer>
         <div>
