--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      <title>Instagram</title>
  
      <!-- Estilos -->
-     <link rel="stylesheet" href="css/styles.css">
+     <link rel="stylesheet" href="css/style.css">
  
      <!-- Font Awesome (Solo una versión) -->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
