--- a/index.html
+++ b/index.html
@@ -1,176 +1,231 @@
 <!DOCTYPE html>
- <html lang="en">
- 
- <head>
-     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-     <meta name="description" content="Clon de perfil de Instagram con HTML y CSS">
-     <meta name="keywords" content="Instagram, clon, HTML, CSS, UI, diseño">
-     <meta name="author" content="Tu Nombre">
-     <title>Instagram</title>
- 
-     <!-- Estilos -->
-     <link rel="stylesheet" href="css/style.css">
- 
-     <!-- Font Awesome (Solo una versión) -->
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
-         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
-         crossorigin="anonymous" referrerpolicy="no-referrer">
- 
-     <!-- Google Fonts -->
-     <link href="https://fonts.googleapis.com/css2?family=Grand+Hotel&display=swap" rel="stylesheet">
- 
-     <!-- Favicon -->
-     <link rel="icon" type="image/png" sizes="96x96" href="assets/Favicon/favicon-96x96.png">
- </head>
- 
- <body>
- 
-     <nav class="sidebar">
-         <a href="#" class="logo">
-             <h1>Instagram</h1>
-         </a>
-         <ul class="nav-list">
-             <li><a href="#"><i class="fa-solid fa-house"></i>Inicio</a></li>
-             <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i>Búsqueda</a></li>
-             <li><a href="#"><i class="fa-solid fa-compass"></i>Explorar</a></li>
-             <li><a href="#"><i class="fa-solid fa-clapperboard"></i>Reels</a></li>
-             <li><a href="#"><i class="fa-solid fa-paper-plane"></i>Mensajes</a></li>
-             <li><a href="#"><i class="fa-solid fa-heart"></i>Notificaciones</a></li>
-             <li><a href="#"><i class="fa-solid fa-square-plus"></i>Crear</a></li>
-             <li><a href="#"><img src="assets/images/profile.jpg" alt="Perfil" class="profile-pic"> Perfil</a></li>
-         </ul>
-         <ul class="nav-bottom">
-             <li><a href="#"><i class="fa-solid fa-bars"></i>Más</a></li>
-         </ul>
-     </nav>
- 
-     <!---->
-     <section class="profile-container">
-         <section class="section-1">
-             <div class="profile-left">
-                 <section class="profile-picture">
-                     <a href="#" title="Cambiar foto de perfil">
-                         <img src="assets/images/profile.jpg" alt="Foto de perfil">
-                     <a  href="#" title="Cambiar foto de perfil">
-                         <img id="img" src="assets/images/profile.jpg" alt="Foto de perfil">
-                     </a>
-                 </section>
- 
- @@ -65,21 +65,21 @@
- 
-             <section class="profile-info">
-                 <div class="profile-header">
-                     <a href="#">
-                     <a class="tittle1" href="#">
-                         <h1>sernatatiana27</h1>
-                     </a>
-                     <div class="profile-actions">
-                         <button>Editar Perfil</button>
-                         <button>Ver archivo</button>
-                         <a href="#"><i class="fa-solid fa-gear"></i></a>
-                         <button class="button1">Editar Perfil</button>
-                         <button class="button1">Ver archivo</button>
-                         <a class="tuerca" href="#"><i class="fa-solid fa-gear"></i></a>
-                     </div>
-                 </div>
-                 <div class="profile-stats">
-                     <h2><span class="stat-number">6</span> <span class="stat-label">publicaciones</span></h2>
-                     <a href="#"><span class="stat-number">12</span> <span class="stat-label">seguidores</span></a>
-                     <a href="#"><span class="stat-number">34</span> <span class="stat-label">seguidos</span></a>
-                     <h2><span class="stat-number1">6</span> <span class="stat-label1">publicaciones</span></h2>
-                     <a href="#"><span class="stat-number2">12</span> <span class="stat-label">seguidores</span></a>
-                     <a href="#"><span class="stat-number3">34</span> <span class="stat-label">seguidos</span></a>
-                 </div>
-                 <h3 class="profile-name">Tatiana Serna</h3>
-                 <h3 class="profile-name" id="name">Tatiana Serna</h3>
-             </section>
-         </section>
- 
- @@ -147,84 +147,84 @@
-             <i class="fa-solid fa-circle-user" id="icon" title="Fotos en las que apareces"></i><br><br>
-             <h1 class="tittle--1"><b>Fotos en las que <br> apareces</b></h1><br>
-             <h3 class="tittle--2">Cuando las personas te etiqueten en fotos, aparecerán<br> aquí.</h3>
-         </div><br><br>
-     </div><br><br>
-         </div>
-     </div><br>
- 
-     <footer>
-         <div>
-             <div class="enlaces-footer">
-                 <a class="footer-tittle" href="">
-                     <h4>Meta</h4>
-                 </a>
-                 <a class="footer-tittle" href="">
-                     <h4>Informacion</h4>
-                 </a>
-                 <a class="footer-tittle" href="">
-                     <h4>Blog</h4>
-                 </a>
-                 <a class="footer-tittle" href="">
-                     <h4>Empleo</h4>
-                 </a>
-                 <a class="footer-tittle" href="">
-                     <h4>Ayuda</h4>
-                 </a>
-                 <a class="footer-tittle" href="">
-                     <h4>API</h4>
-                 </a>
-                 <a class="footer-tittle" href="">
-                     <h4>Privacidad</h4>
-                 </a>
-                 <a class="footer-tittle" href="">
-                     <h4>Condiciones</h4>
-                 </a>
-                 <a class="footer-tittle" href="">
-                     <h4>Ubicaciones</h4>
-                 </a>
-                 <a class="footer-tittle" href="">
-                     <h4>Instagram Lite</h4>
-                 </a>
-                 <a class="footer-tittle" href="">
-                     <h4>Threads</h4>
-                 </a>
-                 <a class="footer-tittle" href="">
-                     <h4>Subir contactos y personas no usuarias</h4>
-                 </a>
-             </div>
-             <div class="enlaces-footer2">
-                 <a class="footer-tittle" href="">
-                     <h4>Meta Verified</h4>
-                 </a><br>
-             </div>
-             <div class="enlaces-footer3">
-                 <h4 class="footer-tittle1">Español (España)<i class="fa-solid fa-chevron-down"></i>© 2025 Instagram from
-                     Meta</h4>
-             </div>
-         </div>
- 
-     </footer>
- 
-     <script>
-         document.addEventListener("DOMContentLoaded", function () {
-             let tabs = document.querySelectorAll(".tab_btn");
-             let contents = document.querySelectorAll(".content");
- 
-             tabs.forEach(tab => {
-                 tab.addEventListener("click", function () {
-                     let target = this.getAttribute("data-target");
- 
-                     // Remover la clase 'active' de todos los tabs y contenidos
-                     tabs.forEach(t => t.classList.remove("active"));
-                     contents.forEach(c => c.style.display = "none"); // Ocultar todos
- 
-                     // Activar solo la sección correspondiente
-                     this.classList.add("active");
-                     document.getElementById(target).style.display = "block";
-                 });
-             });
-         });
- 
-     </script>
- 
- 
- </body>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Clon de perfil de Instagram con HTML y CSS">
+    <meta name="keywords" content="Instagram, clon, HTML, CSS, UI, diseño">
+    <meta name="author" content="Tu Nombre">
+    <title>Instagram</title>
+
+    <!-- Estilos -->
+    <link rel="stylesheet" href="css/styles.css">
+
+    <!-- Font Awesome (Solo una versión) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer">
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Grand+Hotel&display=swap" rel="stylesheet">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/Favicon/favicon-96x96.png">
+</head>
+
+<body>
+
+    <nav class="sidebar">
+        <a href="#" class="logo">
+            <h1>Instagram</h1>
+        </a>
+        <ul class="nav-list">
+            <li><a href="#"><i class="fa-solid fa-house"></i>Inicio</a></li>
+            <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i>Búsqueda</a></li>
+            <li><a href="#"><i class="fa-solid fa-compass"></i>Explorar</a></li>
+            <li><a href="#"><i class="fa-solid fa-clapperboard"></i>Reels</a></li>
+            <li><a href="#"><i class="fa-solid fa-paper-plane"></i>Mensajes</a></li>
+            <li><a href="#"><i class="fa-solid fa-heart"></i>Notificaciones</a></li>
+            <li><a href="#"><i class="fa-solid fa-square-plus"></i>Crear</a></li>
+            <li><a href="#"><img src="assets/images/profile.jpg" alt="Perfil" class="profile-pic"> Perfil</a></li>
+        </ul>
+        <ul class="nav-bottom">
+            <li><a href="#"><i class="fa-solid fa-bars"></i>Más</a></li>
+        </ul>
+    </nav>
+
+    <!---->
+    <section class="profile-container">
+        <section class="section-1">
+            <div class="profile-left">
+                <section class="profile-picture">
+                    <a href="#" title="Cambiar foto de perfil">
+                        <img src="assets/images/profile.jpg" alt="Foto de perfil">
+                    </a>
+                </section>
+
+                <!-- Sección de historias destacadas -->
+                <section class="section-1-3">
+                    <a href=""><i class="fa-solid fa-plus"></i></a>
+                    <h4>Nuevo</h4>
+                </section>
+            </div>
+
+            <section class="profile-info">
+                <div class="profile-header">
+                    <a href="#">
+                        <h1>sernatatiana27</h1>
+                    </a>
+                    <div class="profile-actions">
+                        <button>Editar Perfil</button>
+                        <button>Ver archivo</button>
+                        <a href="#"><i class="fa-solid fa-gear"></i></a>
+                    </div>
+                </div>
+                <div class="profile-stats">
+                    <h2><span class="stat-number">6</span> <span class="stat-label">publicaciones</span></h2>
+                    <a href="#"><span class="stat-number">12</span> <span class="stat-label">seguidores</span></a>
+                    <a href="#"><span class="stat-number">34</span> <span class="stat-label">seguidos</span></a>
+                </div>
+                <h3 class="profile-name">Tatiana Serna</h3>
+            </section>
+        </section>
+
+
+    </section>
+
+
+
+    </section><br>
+
+    <!-- Mover la línea separadora aquí -->
+    <div class="profile-divider"></div>
+
+    <!--TABS-->
+    <!-- TABS -->
+    <!-- TABS -->
+    <div class="container">
+        <div class="tab_box">
+            <button class="tab_btn active" data-target="publicaciones">
+                <i class="fa-solid fa-th"></i>PUBLICACIONES
+            </button>
+            <button class="tab_btn" data-target="guardadas">
+                <i class="fa-solid fa-bookmark"></i>GUARDADAS
+            </button>
+            <button class="tab_btn" data-target="etiquetadas">
+                <i class="fa-solid fa-image-portrait"></i>ETIQUETADAS
+            </button>
+        </div>
+    </div><br>
+
+    <!-- Línea separadora (ajustada para que no toque los bordes) -->
+    <!-- <div class="profile-divider"></div> >
+  
+  <-- CONTENIDO DE LAS PESTAÑAS -->
+
+    <div class="content_box">
+        <div class="content active" id="publicaciones">
+            <a href="#"><img class="imagen1" src="assets/images/1.jpg" alt="imagen 1"></a>
+            <a href="#"><img class="imagen2" src="assets/images/2.jpg" alt="imagen 2"></a>
+            <a href="#"><img class="imagen3" src="assets/images/3.jpg" alt="imagen 3"></a><br>
+        </div>
+        <div class="content" id="publicaciones2">
+            <a href="#"><img class="imagen4" src="assets/images/4.jpg" alt="imagen 1"></a>
+            <a href="#"><img class="imagen5" src="assets/images/5.jpg" alt="imagen 2"></a>
+            <a href="#"><img class="imagen6" src="assets/images/6.jpg" alt="imagen 3"></a>
+        </div>
+
+        <div class="content" id="guardadas">
+            <a href="#">
+                <h5 class="tittle-1">Solo tú puedes ver lo que has guardado</h4>
+            </a>
+            <a href="#">
+                <h3 class="tittle-2" ><i class="fa-solid fa-plus"></i>Nueva Colección</h3>
+            </a>
+            <div class="contenedor-especial">
+                <a href="#">
+                    <img class="imagen-g1" src="assets/images/Captura de pantalla 2025-03-31 180720.png" alt="imagen guardada">
+                </a>
+                <h2 class="tittle-3">Todas las publicaciones</h2>
+            </div>
+            
+        </div>
+
+        <div class="content" id="etiquetadas">
+            <i class="fa-solid fa-circle-user" id="icon" title="Fotos en las que apareces"></i><br><br>
+            <h1 class="tittle--1"><b>Fotos en las que <br> apareces</b></h1><br>
+            <h3 class="tittle--2">Cuando las personas te etiqueten en fotos, aparecerán<br> aquí.</h3>
+        </div><br><br>
+    </div><br><br>
+
+    <footer>
+        <div>
+            <div class="enlaces-footer">
+                <a class="footer-tittle" href="">
+                    <h4>Meta</h4>
+                </a>
+                <a class="footer-tittle" href="">
+                    <h4>Informacion</h4>
+                </a>
+                <a class="footer-tittle" href="">
+                    <h4>Blog</h4>
+                </a>
+                <a class="footer-tittle" href="">
+                    <h4>Empleo</h4>
+                </a>
+                <a class="footer-tittle" href="">
+                    <h4>Ayuda</h4>
+                </a>
+                <a class="footer-tittle" href="">
+                    <h4>API</h4>
+                </a>
+                <a class="footer-tittle" href="">
+                    <h4>Privacidad</h4>
+                </a>
+                <a class="footer-tittle" href="">
+                    <h4>Condiciones</h4>
+                </a>
+                <a class="footer-tittle" href="">
+                    <h4>Ubicaciones</h4>
+                </a>
+                <a class="footer-tittle" href="">
+                    <h4>Instagram Lite</h4>
+                </a>
+                <a class="footer-tittle" href="">
+                    <h4>Threads</h4>
+                </a>
+                <a class="footer-tittle" href="">
+                    <h4>Subir contactos y personas no usuarias</h4>
+                </a>
+            </div>
+            <div class="enlaces-footer2">
+                <a class="footer-tittle" href="">
+                    <h4>Meta Verified</h4>
+                </a><br>
+            </div>
+            <div class="enlaces-footer3">
+                <h4 class="footer-tittle1">Español (España)<i class="fa-solid fa-chevron-down"></i>© 2025 Instagram from
+                    Meta</h4>
+            </div>
+        </div>
+
+    </footer>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            let tabs = document.querySelectorAll(".tab_btn");
+            let contents = document.querySelectorAll(".content");
+
+            tabs.forEach(tab => {
+                tab.addEventListener("click", function () {
+                    let target = this.getAttribute("data-target");
+
+                    // Remover la clase 'active' de todos los tabs y contenidos
+                    tabs.forEach(t => t.classList.remove("active"));
+                    contents.forEach(c => c.style.display = "none"); // Ocultar todos
+
+                    // Activar solo la sección correspondiente
+                    this.classList.add("active");
+                    document.getElementById(target).style.display = "block";
+                });
+            });
+        });
+
+    </script>
+
+
+</body>
+
+</html>
