--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                 © 2023 Instagram from Meta
             </div>
         </footer>
-        <script src="js/script.js"></script>
+        <script src="../assets/js/script.js"></script>
     </body>
 
 </html>
