--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
         <a href="#" class="logo">
             <h1>Instagram</h1>
         </a>
-        <ul class="nav-list">
-            <li><a href="#"><i class="fa-solid fa-house"></i>Inicio</a></li>
-            <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i>Búsqueda</a></li>
-            <li><a href="#"><i class="fa-solid fa-compass"></i>Explorar</a></li>
-            <li><a href="#"><i class="fa-solid fa-clapperboard"></i>Reels</a></li>
-            <li><a href="#"><i class="fa-solid fa-paper-plane"></i>Mensajes</a></li>
-            <li><a href="#"><i class="fa-solid fa-heart"></i>Notificaciones</a></li>
-            <li><a href="#"><i class="fa-solid fa-square-plus"></i>Crear</a></li>
-            <li><a href="#"><img src="assets/images/profile.jpg" alt="Perfil" class="profile-pic"> Perfil</a></li>
-        </ul>
-        <ul class="nav-bottom">
-            <li><a href="#"><i class="fa-solid fa-bars"></i>Más</a></li>
-        </ul>
+            <ul class="nav-list">
+                <li><a href="#"><i class="fa-solid fa-house"></i>Inicio</a></li>
+                <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i>Búsqueda</a></li>
+                <li><a href="#"><i class="fa-solid fa-compass"></i>Explorar</a></li>
+                <li><a href="#"><i class="fa-solid fa-clapperboard"></i>Reels</a></li>
+                <li><a href="#"><i class="fa-solid fa-paper-plane"></i>Mensajes</a></li>
+                <li><a href="#"><i class="fa-solid fa-heart"></i>Notificaciones</a></li>
+                <li><a href="#"><i class="fa-solid fa-square-plus"></i>Crear</a></li>
+                <li><a href="#"><img src="assets/images/profile.jpg" alt="Perfil" class="profile-pic"> Perfil</a></li>
+            </ul>
+            <ul class="nav-bottom">
+                <li><a href="#"><i class="fa-solid fa-bars"></i>Más</a></li>
+            </ul>
     </nav>
 
     <!---->
@@ -51,9 +51,11 @@
         <section class="section-1">
             <div class="profile-left">
                 <section class="profile-picture">
+                    <div>
                     <a href="#" title="Cambiar foto de perfil">
                         <img src="assets/images/profile.jpg" alt="Foto de perfil">
                     </a>
+                    </div>
                 </section>
 
                 <!-- Sección de historias destacadas -->
@@ -132,15 +134,16 @@
                 <h5 class="tittle-1">Solo tú puedes ver lo que has guardado</h4>
             </a>
             <a href="#">
-                <h3 class="tittle-2" ><i class="fa-solid fa-plus"></i>Nueva Colección</h3>
+                <h3 class="tittle-2"><i class="fa-solid fa-plus"></i>Nueva Colección</h3>
             </a>
             <div class="contenedor-especial">
                 <a href="#">
-                    <img class="imagen-g1" src="assets/images/Captura de pantalla 2025-03-31 180720.png" alt="imagen guardada">
+                    <img class="imagen-g1" src="assets/images/Captura de pantalla 2025-03-31 180720.png"
+                        alt="imagen guardada">
                 </a>
                 <h2 class="tittle-3">Todas las publicaciones</h2>
             </div>
-            
+
         </div>
 
         <div class="content" id="etiquetadas">
