--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <header class="header">
         <div class="header-profile-pic">
             <img class="user-profile-pic" src="./assets/images/1.jpg"
-                style="width:200px; height:200px; border-radius: 50px; object-fit: cover;"
+                style="width: 500px; height: 166px; border-radius: 50%; object-fit: cover;"
                 alt="Foto de perfil principal del usuario">
             <!-- Contenido de la cabecera del perfil para moviles -->
             <div class="content-profile-movil">
@@ -243,7 +243,7 @@
 
         <div class="main-content">
             <div class="sections-menu">
-                <div class="section-menu-item">
+                <div class="section-menu-item" data-target="publicaciones">
                     <svg aria-label="" class="_ab6-" color="rgb(245, 245, 245)" fill="rgb(245, 245, 245)" height="12"
                         role="img" viewBox="0 0 24 24" width="12">
                         <rect fill="none" height="18" stroke="currentColor" stroke-linecap="round"
@@ -257,21 +257,17 @@
                         <line fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
                             stroke-width="2" x1="21" x2="3" y1="14.985" y2="14.985"></line>
                     </svg>
-                    <span>
-                        Publicaciones
-                    </span>
+                    <span>Publicaciones</span>
                 </div>
-                <div class="section-menu-item">
+                <div class="section-menu-item" data-target="guardados">
                     <svg aria-label="" class="_ab6-" color="rgb(168, 168, 168)" fill="rgb(168, 168, 168)" height="12"
                         role="img" viewBox="0 0 24 24" width="12">
                         <polygon fill="none" points="20 21 12 13.44 4 21 4 3 20 3 20 21" stroke="currentColor"
                             stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></polygon>
                     </svg>
-                    <span>
-                        Guardado
-                    </span>
+                    <span>Guardado</span>
                 </div>
-                <div class="section-menu-item">
+                <div class="section-menu-item" data-target="etiquetadas">
                     <svg aria-label="" class="_ab6-" color="rgb(168, 168, 168)" fill="rgb(168, 168, 168)" height="12"
                         role="img" viewBox="0 0 24 24" width="12">
                         <path
@@ -285,9 +281,7 @@
                         <circle cx="12.072" cy="11.075" fill="none" r="3.556" stroke="currentColor"
                             stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></circle>
                     </svg>
-                    <span>
-                        Etiquetadas
-                    </span>
+                    <span>Etiquetadas</span>
                 </div>
             </div>
             <div class="grid-content">
@@ -342,8 +336,11 @@
             </div>
             <div class="footer-copy">
                 <a href="#">Español<i class="fi fi-rr-angle-small-down"></i></a>
-                © 2023 Instagram from Meta
-            </div>
+                © 2025 Instagram from Meta
+            </div> s
+  <scrctionsMenu[0]);
+});
+            </script>
         </footer>
     </body>
 
